feat: mobile view margins

--- a/src/shared/scss/_card.scss
+++ b/src/shared/scss/_card.scss
@@ -2,6 +2,7 @@
   background-color: $white;
   border: 1px solid $grey;
   border-radius: 0.5rem;
+  margin-bottom: 2rem;
 
   .card-img {
     padding: 1.25rem 1.25rem 0;
