--- a/src/shared/scss/_detail.scss
+++ b/src/shared/scss/_detail.scss
@@ -1,6 +1,26 @@
 .detail-phone {
   margin-top: 3rem;
 
+  .detail-btn {
+    background-color: $purple;
+    text-align: center;
+    padding: 1rem 2rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    color: #fff;
+    margin-bottom: 2rem;
+
+    &:hover {
+      background-color: $darkpurple;
+    }
+  }
+
+  .detail-img {
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+  }
+
   .detail-body {
     h1 {
       margin-top: 0;
