--- a/src/shared/style.css
+++ b/src/shared/style.css
@@ -9,7 +9,8 @@ nav {
 .card {
   background-color: #fff;
   border: 1px solid #E4E4E4;
-  border-radius: 0.5rem; }
+  border-radius: 0.5rem;
+  margin-bottom: 2rem; }
   .card .card-img {
     padding: 1.25rem 1.25rem 0;
     display: flex;
@@ -171,6 +172,20 @@ nav {
     transform: scale(1); } }
 .detail-phone {
   margin-top: 3rem; }
+  .detail-phone .detail-btn {
+    background-color: #6364d8;
+    text-align: center;
+    padding: 1rem 2rem;
+    font-weight: 700;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    color: #fff;
+    margin-bottom: 2rem; }
+    .detail-phone .detail-btn:hover {
+      background-color: #393ab1; }
+  .detail-phone .detail-img {
+    margin-bottom: 2rem;
+    margin-top: 2rem; }
   .detail-phone .detail-body h1 {
     margin-top: 0; }
   .detail-phone .detail-body .detail-description {
